syntax = "proto3";

package notification;
option go_package = "user-risk-system/shared/proto/notification";

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string user_id = 1;
  string type = 2; // USER_CREATED, RISK_DETECTED
  string message = 3;
  string email = 4;
}

message SendNotificationResponse {
  bool success = 1;
  string error = 2;
}
